add ai recomendations and refacto mobile